--- a/src/Modules/MasterModule/Views/Clients/OtherData.xaml
+++ b/src/Modules/MasterModule/Views/Clients/OtherData.xaml
@@ -21,12 +21,120 @@
                     <local:ClientBilling></local:ClientBilling>
                 </GroupBox>
                 <GroupBox Header="Periocidad de Facturacion">
-                    <local:BillingDates></local:BillingDates>
+                    <Grid>
+                        <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" >
+
+                            <KarveControls:DualFieldSearchBox x:Name="InvoceBloq" 
+                                              LabelText="Bloque Facturacion" 
+                                              Height="30" 
+                                          Margin="0,5,0,0"
+                                          AssistDataFieldFirst="NUM_PROVEE"
+                                          AssistDataFieldSecond="NOMBRE"
+                                          AssistTableName="{Binding AssuranceKind, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          IsReadOnlySecond="True"
+                                          AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          DataFieldFirst="{Binding AssuranceCompanyPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          AssistProperties="Code,Nombre"
+                                          ItemChangedCommand="{Binding ItemChangedCommand}"
+                                          MagnifierCommand="{Binding MagnifierCommand}" 
+                                          DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding AssuranceCompanyList, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          LabelTextWidth="115"
+                                          TextContentFirstWidth="60" 
+                                          TextContentSecondWidth="150"
+                                          ButtonImage="/KarveCar;component/Images/search.png"/>
+
+                            <KarveControls:DataField DataSourcePath="NOMBRE" 
+                                                      DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                                      LabelText="Numero Copia Factura"
+                                                      LabelTextWidth="130"
+                                                      TextContentWidth="210"
+                                                      ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                      Margin="0,5,0,0"
+                                                      Height="35"
+                                                      IsReadOnly="False"/>
+
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                <KarveControls:DataFieldCheckBox Content="Una per contracto" 
+                                                 KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay}"
+                                                 KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommond, Mode=OneWay}"
+                                                 KarveControls:ControlExt.DataSourcePath="PATH"
+                                                 HorizontalAlignment="Left"
+                                                 VerticalAlignment="Top"/>
+                                <KarveControls:DataFieldCheckBox Content="Por periodo"
+                                             KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay}"
+                                                 KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommond, Mode=OneWay}"
+                                                 KarveControls:ControlExt.DataSourcePath="PATH"
+                                                 HorizontalAlignment="Left"
+                                                 VerticalAlignment="Top"
+                                             />
+                            </StackPanel>
+                            <KarveControls:DualFieldSearchBox x:Name="InvoiceBroker" 
+                                              LabelText="Abonar a" 
+                                              Height="30" 
+                                          Margin="0,5,0,0"
+                                          AssistDataFieldFirst="NUM_PROVEE"
+                                          AssistDataFieldSecond="NOMBRE"
+                                          AssistTableName="{Binding AssuranceKind, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          IsReadOnlySecond="True"
+                                          AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          DataFieldFirst="{Binding AssuranceCompanyPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          AssistProperties="Code,Nombre"
+                                          ItemChangedCommand="{Binding ItemChangedCommand}"
+                                          MagnifierCommand="{Binding MagnifierCommand}" 
+                                          DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding AssuranceCompanyList, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          LabelTextWidth="50"
+                                          TextContentFirstWidth="60" 
+                                          TextContentSecondWidth="150"
+                                          ButtonImage="/KarveCar;component/Images/search.png"/>
+
+
+
+                          
+                        </StackPanel>
+                    </Grid>
                 </GroupBox>
-                <Group
+                <GroupBox Header="Opciones">
+                    <StackPanel>
+                        <KarveControls:DataFieldCheckBox Content="No imprimes importe en el contracto" />
+                        <KarveControls:DataFieldCheckBox Content="Contracto: Importes pero sin Valorar"/>
+                        <KarveControls:DataFieldCheckBox Content="No Cobrar franquicias" />
+                        <KarveControls:DataFieldCheckBox Content="No Censado" />
+                        <GroupBox Header="Logo en Factura">
+                            <StackPanel Orientation="Horizontal">
+                                <RadioButton Content="Yes" Width="100"/>
+                                <RadioButton Content="No" Width="100"/>
+                            </StackPanel>
+                        </GroupBox>
+                        <StackPanel Orientation="Horizontal">
+                            <KarveControls:DataField x:Name="EmailField" 
+                                             LabelText="Email Mantenimiento:"
+                                             DataObject="{Binding DataObject, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                                             LabelTextWidth="120"
+                                             LabelVisible="True"
+                                             DataAllowed="Email"
+                                             ItemChangedCommand="{Binding ItemChangedCommand, PresentationTraceSources.TraceLevel=High}"
+                                             IsReadOnly="False"
+                                             TextContentWidth="150"
+                                             DataFieldHeight="25"
+                                             DataSourcePath="EMAIL">
+                            </KarveControls:DataField>
+                            <Button Command="{Binding EmailCommand}" CommandParameter="{Binding TextContent, ElementName=EmailField}">
+                                <Image Source="/KarveControls;component/Images/email.png" Height="25" Width="19"/>
+                            </Button>
+                        </StackPanel>
+
+
+                    </StackPanel>
+                </GroupBox>
+
             </StackPanel>
             <StackPanel Grid.Column="1">
                 <local:ActivitySector></local:ActivitySector>
+
+
+
             </StackPanel>
         </Grid>
     </Grid>
