--- a/src/Modules/MasterModule/Views/Clients/ClientBilling.xaml
+++ b/src/Modules/MasterModule/Views/Clients/ClientBilling.xaml
@@ -90,6 +90,8 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+
         </Grid.RowDefinitions>
         
         <Grid Margin="10,10,0,0"
@@ -146,6 +148,7 @@
                                              SourceView="{Binding SourceView, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
             </KarveControls:DualFieldSearchBox>
 
+            
         </StackPanel>
         <Grid Grid.Row="2">
             <StackPanel  Orientation="Horizontal">
@@ -155,7 +158,7 @@
                                                      LabelVisible="False"
                                                      TextContentWidth="50"
                                                      Margin="0,5,0,0"
-                                                     Height="25"
+                                                     Height="30"
                                                      ItemChangedCommand="{Binding ItemChangedCommand}">
 
                 </KarveControls:DataField>
@@ -164,7 +167,7 @@
                                                      DataSourcePath="PLAZO2"
                                                      LabelVisible="False"
                                                      TextContentWidth="50"
-                                                     Height="25"
+                                                     Height="30"
                                                          Margin="0,5,0,0"
                                                      ItemChangedCommand="{Binding ItemChangedCommand}">
 
@@ -174,7 +177,7 @@
                                                      LabelVisible="False"
                                                          Margin="0,5,0,0"
                                                      TextContentWidth="50"
-                                                     Height="25"
+                                                     Height="30"
                                                      ItemChangedCommand="{Binding ItemChangedCommand}">
 
                 </KarveControls:DataField>
@@ -184,7 +187,7 @@
                                                          Margin="0,5,0,0"
                                                      LabelVisible="False"
                                                      TextContentWidth="50"
-                                                     Height="25"
+                                                     Height="30"
                                                      ItemChangedCommand="{Binding ItemChangedCommand}">
 
                 </KarveControls:DataField>
@@ -194,7 +197,7 @@
                                                          Margin="0,5,0,0"
                                                      LabelVisible="False"
                                                      TextContentWidth="50"
-                                                     Height="25"
+                                                     Height="30"
                                                      ItemChangedCommand="{Binding ItemChangedCommand}">
 
                 </KarveControls:DataField>
@@ -205,22 +208,11 @@
                                                          Margin="0,5,0,0"
                                                      LabelVisible="False"
                                                      TextContentWidth="50"
-                                                     Height="25"
+                                                     Height="30"
                                                      ItemChangedCommand="{Binding ItemChangedCommand}">
 
                 </KarveControls:DataField>
-                <KarveControls:DataField DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                     DataSourcePath="DTO"
-                                                         Margin="0,5,0,0"
-                                                     LabelVisible="True"
-                                                     LabelText="{Binding ldescuento, Source={StaticResource ResourceLanguage}}"
-                                                     LabelTextWidth="90"
-                                                     TextContentWidth="100"
-                                                     Height="25"
-                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
-
-                </KarveControls:DataField>
-
+                
                 <!--
                 <TextBlock>
                 <ContentControl>
@@ -237,10 +229,22 @@
 
         </Grid>
         
-        <Grid Grid.Row="3">
-        </Grid>
-        <Grid Grid.Row="4">
-</Grid>
+        
+
+            <KarveControls:DataField Grid.Row="3" DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                     DataSourcePath="DTO"
+                                                         Margin="0,5,0,0"
+                                                     LabelVisible="True"
+                                                     LabelText="{Binding ldescuento, Source={StaticResource ResourceLanguage}}"
+                                                     LabelTextWidth="90"
+                                                     TextContentWidth="100"
+                                                     Height="30"
+                                                     ItemChangedCommand="{Binding ItemChangedCommand}">
+
+            </KarveControls:DataField>
+
+        
+
     </Grid>
 
 </UserControl>
